# oop-4th-sem-labs

./: .gitignore  Makefile  README.md
lab_03/: CMakeLists.txt  Makefile  build  clean
lab_03/docs/: lab_03.mdj
lab_03/include/: abstract_factory.hpp  abstract_loader.h  base_canvas.hpp  base_drawer.hpp  base_error.h  base_manager.h  builder.h  camera.h  camera_error.h  command.h  command_base.hpp  commands.hpp  component.h  composite.h  controller.hpp  details.h  draw_manager.h  drawer.h  exception_base.hpp  exception_container.hpp  exception_default.hpp  exception_draw.hpp  exception_load.hpp  exception_model_view.hpp  exception_scene.hpp  facade.h  facade.hpp  factory.h  file_error.h  iterator.h  iterator.hpp  iterator_base.hpp  iterator_const.hpp  link.h  link.hpp  loader.h  loader_abstract.hpp  loader_file.hpp  loader_model.hpp  loader_source.hpp  (+38 more)
lab_03/meta/: cube.txt  dodecahedron.txt  icosahedron.txt  icosidodecahedron.txt  lab_03.pro  mainwindow.ui  model.csv  octahedron.txt  tetrahedron.txt
lab_03/src/: builder.cpp  camera.cpp  commands.cpp  composite.cpp  controller.cpp  details.cpp  draw_manager.cpp  drawer.cpp  facade.cpp  link.cpp  loader.cpp  loader_file.cpp  loader_model.cpp  main.cpp  mainwindow.cpp  manager_camera.cpp  manager_draw.cpp  manager_scene.cpp  manager_transform.cpp  model.cpp  model_builder.cpp  model_director.cpp  object_camera.cpp  object_composite.cpp  object_compound.cpp  object_insvisible.cpp  object_model.cpp  object_visible.cpp  point.cpp  qt_canvas.cpp  qt_drawer.cpp  qt_factory.cpp  reform_manager.cpp  scene.cpp  (+2 more)
src/: app.cpp  (+3 more)
(+89 files in other folders)
